Move context to SPI